Add required exports/opens